--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Recipes by Aarnav</h1>
-</body>
+    <a href="/recipes/biryani.html">Biryani</a>
+    <a href="/recipes/burger.html">Burger</a>
 </html>
