--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -59,5 +59,7 @@
             and more coleslaw on top of bottom buns. Close sandwiches with top buns.
         </li>
     </ol>
+
+    <a href="/index.html">Back</a>
 </body>
 </html>
