Add alt text to image

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,8 +6,9 @@
     <title>Gourmet Chicken Burger</title>
 </head>
 <body>
-    <img src="/images/burger.jpeg">
     <h1>Gourmet Chicken Burger</h1>
+
+    <img src="/images/burger.jpeg" alt="Burger">
 
     <h2>Description</h2>
 
