Added Mac N' Cheese to Index

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <li>
             <a href="/recipes/burger.html">Burger</a>
         </li>
+        <li>
+            <a href="/recipes/macaroni.html">Mac N' Cheese</a>
+        </li>
     </ul>
 </html>
