--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -9,6 +9,41 @@
     <h1>Mac N' Cheese</h1>
 
     <img src="/images/macaroni.jpg" alt="Mac N' Cheese">
+
+    <h2>Description</h2>
     
+    <p>
+        Nothing says comforting and classic like mac and cheese. 
+        Remember when you were a little kid and you sat down at the dinner table? 
+        There it was: a glorious pot of mac and cheese. Ooey, gooey, and oh-so-delightful. 
+        Well, we’re taking you back there with our 3-ingredient mac-hack. That’s right: 
+        only three ingredients to bliss. It’s so good, you’ll never go back to the boxed stuff!
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>5 cups milk (1 1/4 L)</li>
+        <li>1 lb elbow macaroni(455 g), dry</li>
+        <li>2 cups shredded cheddar cheese(200 g)</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            In a large pot, bring the milk to a boil.
+        </li>
+        <li>
+            Add the pasta and stir constantly until the pasta is cooked, about 10 minutes.
+        </li>
+        <li>
+            Turn off the heat, then add the cheddar. Stir until the cheese is melted 
+            and the pasta is evenly coated.
+        </li>
+        <li>
+            Enjoy
+        </li>
+    </ol>
 </body>
 </html>
