--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Mac N' Cheese</h1>
 
-    <img src="/images/macaroni.jpg" alt="Mac N' Cheese">
+    <img src="./images/macaroni.jpg" alt="Mac N' Cheese">
 
     <h2>Description</h2>
     
@@ -46,6 +46,6 @@
         </li>
     </ol>
 
-    <a href="/index.html">Back</a>
+    <a href="./index.html">Back</a>
 </body>
 </html>
