--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Recipes by Aarnav</h1>
     <ul>
         <li>    
-            <a href="/recipes/biryani.html">Biryani</a>
+            <a href="./recipes/biryani.html">Biryani</a>
         </li>
         <li>
-            <a href="/recipes/burger.html">Burger</a>
+            <a href="./recipes/burger.html">Burger</a>
         </li>
         <li>
-            <a href="/recipes/macaroni.html">Mac N' Cheese</a>
+            <a href="./recipes/macaroni.html">Mac N' Cheese</a>
         </li>
     </ul>
 </html>
