--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Chicken Biryani</h1>
 
-    <img src="/images/biryani.jpeg" alt="Biryani">
+    <img src="../images/biryani.jpeg" alt="Biryani">
 
     <h2>Description</h2>
 
@@ -160,6 +160,6 @@
         </li>
     </ol>
 
-    <a href="/index.html">Back</a>
+    <a href="../index.html">Back</a>
 </body>
 </html>
