--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Gourmet Chicken Burger</h1>
 
-    <img src="/images/burger.jpeg" alt="Burger">
+    <img src="../images/burger.jpeg" alt="Burger">
 
     <h2>Description</h2>
 
@@ -61,6 +61,6 @@
         </li>
     </ol>
 
-    <a href="/index.html">Back</a>
+    <a href="../index.html">Back</a>
 </body>
 </html>
