--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes by Aarnav</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        a:visited {
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Recipes by Aarnav</h1>
-    <ul>
+    <h1 class="header-text">Recipes by Aarnav</h1>
+    <img id="chef" src="./images/chef.png" alt="Chef Illustration">
+    <ul class="link-list">
         <li>    
-            <a href="./recipes/biryani.html">Biryani</a>
+            <a class="link"  href="./recipes/biryani.html">Biryani</a>
         </li>
+        <li> 
+            <a class="link" href="./recipes/burger.html">Burger</a>
+        </li class="link">
         <li>
-            <a href="./recipes/burger.html">Burger</a>
-        </li>
-        <li>
-            <a href="./recipes/macaroni.html">Mac N' Cheese</a>
+            <a class="link" href="./recipes/macaroni.html">Mac N' Cheese</a>
         </li>
     </ul>
 </html>
