Finish styling and add credits

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes by Aarnav</title>
+    <title>Recipes by Aarnav S.</title>
     <link rel="stylesheet" href="style.css">
     <style>
         a:visited {
@@ -12,8 +12,10 @@
     </style>
 </head>
 <body>
-    <h1 class="header-text">Recipes by Aarnav</h1>
+    <h1 class="header-text">RECIPES BY AARNAV S.</h1>
+    
     <img id="chef" src="./images/chef.png" alt="Chef Illustration">
+
     <ul class="link-list">
         <li>    
             <a class="link"  href="./recipes/biryani.html">Biryani</a>
@@ -25,4 +27,11 @@
             <a class="link" href="./recipes/macaroni.html">Mac N' Cheese</a>
         </li>
     </ul>
+
+    <div>
+        <div class="credits">
+            <a class="link" href="./credits.html"><i>Image Credits</i></a>
+        </div>
+    </div>
+    
 </html>
