--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Biryani</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        a:visited {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Chicken Biryani</h1>
 
     <img src="../images/biryani.jpeg" alt="Biryani">
+    <br>
+    <div class="credit-text">
+        Credits: <i><a class="link" href="https://recipes.timesofindia.com/recipes/chicken-biryani/rs53096628.cms">Times Food</a></i>
+    </div>
 
     <h2>Description</h2>
 
@@ -29,83 +38,85 @@
 
     <h2>Ingredients</h2>
 
-    <ul>
-        <li>
-            1 cup boiled basmati rice
-        </li>
-        <li>
-            600 gm chicken
-        </li>
-        <li>
-            1/2 teaspoon mint leaves
-        </li>
-        <li>
-            1 tablespoon garam masala powder
-        </li>
-        <li>
-            salt as required
-        </li>
-        <li>
-            1 teaspoon saffron
-        </li>
-        <li>
-            2 tablespoon refined oil
-        </li>
-        <li>
-            1 tablespoon bay leaf
-        </li>
-        <li>
-            3 green cardamom
-        </li>
-        <li>
-            1 black cardamom
-        </li>
-        <li>
-            2 clove
-        </li>
-        <li>
-            1 teaspoon cumin seeds
-        </li>
-        <li>
-            2 onion
-        </li>
-        <li>
-            4 green chillies
-        </li>
-        <li>
-            1 teaspoon turmeric
-        </li>
-        <li>
-            1 tablespoon ginger paste
-        </li>
-        <li>
-            1 tablespoon garlic paste
-        </li>
-        <li>
-            1 teaspoon red chilli powder
-        </li>
-        <li>
-            1 cup hung curd
-        </li>
-        <li>
-            1/2 tablespoon ginger
-        </li>
-        <li>
-            2 tablespoon coriander leaves
-        </li>
-        <li>
-            2 drops kewra
-        </li>
-        <li>
-            water as required
-        </li>
-        <li>
-            1 tablespoon rose water
-        </li>
-        <li>
-            1 tablespoon ghee
-        </li>
-    </ul>
+    <div class="flex-container">
+        <ul>
+            <li>
+                1 cup boiled basmati rice
+            </li>
+            <li>
+                600 gm chicken
+            </li>
+            <li>
+                1/2 teaspoon mint leaves
+            </li>
+            <li>
+                1 tablespoon garam masala powder
+            </li>
+            <li>
+                salt as required
+            </li>
+            <li>
+                1 teaspoon saffron
+            </li>
+            <li>
+                2 tablespoon refined oil
+            </li>
+            <li>
+                1 tablespoon bay leaf
+            </li>
+            <li>
+                3 green cardamom
+            </li>
+            <li>
+                1 black cardamom
+            </li>
+            <li>
+                2 clove
+            </li>
+            <li>
+                1 teaspoon cumin seeds
+            </li>
+            <li>
+                2 onion
+            </li>
+            <li>
+                4 green chillies
+            </li>
+            <li>
+                1 teaspoon turmeric
+            </li>
+            <li>
+                1 tablespoon ginger paste
+            </li>
+            <li>
+                1 tablespoon garlic paste
+            </li>
+            <li>
+                1 teaspoon red chilli powder
+            </li>
+            <li>
+                1 cup hung curd
+            </li>
+            <li>
+                1/2 tablespoon ginger
+            </li>
+            <li>
+                2 tablespoon coriander leaves
+            </li>
+            <li>
+                2 drops kewra
+            </li>
+            <li>
+                water as required
+            </li>
+            <li>
+                1 tablespoon rose water
+            </li>
+            <li>
+                1 tablespoon ghee
+            </li>
+        </ul>
+    </div>
 
     <h2>Steps</h2>
 
@@ -161,6 +172,11 @@
         </li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <div>
+        <div class="back">
+            <b>Return</b> <a class ="back" href="../index.html">to Homepage</a>
+        </div>
+    </div>
+
 </body>
 </html>
