--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourmet Chicken Burger</title>
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        a:visited {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Gourmet Chicken Burger</h1>
 
     <img src="../images/burger.jpeg" alt="Burger">
+    <br>
+    <div class="credit-text">
+        Credits: <i><a class="link" href="https://www.delish.com/cooking/recipe-ideas/recipes/a13513/chicken-burgers-recipe-mslo1010/">Delish</a></i>
+    </div>
 
     <h2>Description</h2>
 
@@ -46,21 +56,32 @@
 
     <ol>
         <li>
-            In a large bowl, combine chicken, paprika, garlic, and green onions, 
-            and season with salt and pepper. Divide mixture into 4 patties. 
+            <p>
+                In a large bowl, combine chicken, paprika, garlic, and green onions, 
+                and season with salt and pepper. Divide mixture into 4 patties. 
+            </p>
         </li>
         <li>
-            In a large skillet over medium heat, heat oil. Add burger patties and cook, 
-            flipping once, until golden and a thermometer inserted into the center registers 165°,
-            8 to 10 minutes. Top with cheddar, cover, and cook until just melted, 2 minutes. 
-            Remove from heat and transfer patties to a plate. 
+            <p>
+                In a large skillet over medium heat, heat oil. Add burger patties and cook, 
+                flipping once, until golden and a thermometer inserted into the center registers 165°,
+                8 to 10 minutes. Top with cheddar, cover, and cook until just melted, 2 minutes. 
+                Remove from heat and transfer patties to a plate. 
+            </p>
         </li>
         <li>
-            Stack lettuce, coleslaw, chicken burgers, avocado, red onion, jalapeño, 
+            <p>
+                Stack lettuce, coleslaw, chicken burgers, avocado, red onion, jalapeño, 
             and more coleslaw on top of bottom buns. Close sandwiches with top buns.
+            </p>
         </li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <div>
+        <div class="back">
+            <b>Return</b> <a class ="back" href="../index.html">to Homepage</a>
+        </div>
+    </div>
+
 </body>
 </html>
