--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac N' Cheese</title>
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        a:visited {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Mac N' Cheese</h1>
 
     <img src="../images/macaroni.jpg" alt="Mac N' Cheese">
+    <br>
+    <div class="credit-text">
+        Credits: <i><a class="link" href="https://www.delish.com/cooking/recipe-ideas/recipes/a13513/chicken-burgers-recipe-mslo1010/">Tasty</a></i>
+    </div>
 
     <h2>Description</h2>
     
@@ -32,20 +42,32 @@
 
     <ol>
         <li>
-            In a large pot, bring the milk to a boil.
+            <p>
+                In a large pot, bring the milk to a boil.
+            </p>
         </li>
         <li>
-            Add the pasta and stir constantly until the pasta is cooked, about 10 minutes.
+            <p>
+                Add the pasta and stir constantly until the pasta is cooked, about 10 minutes.
+            </p>
         </li>
         <li>
-            Turn off the heat, then add the cheddar. Stir until the cheese is melted 
-            and the pasta is evenly coated.
+            <p>
+                Turn off the heat, then add the cheddar. Stir until the cheese is melted 
+                and the pasta is evenly coated.
+            </p>
         </li>
         <li>
-            Enjoy
+            <p>
+                Enjoy!
+            </p>
         </li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <div>
+        <div class="back">
+            <b>Return</b> <a class ="back" href="../index.html">to Homepage</a>
+        </div>
+    </div>
 </body>
 </html>
