--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         a:visited {
             color: black;
         }
+
+        a:link {
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -33,5 +37,5 @@
             <a class="link" href="./credits.html"><i>Image Credits</i></a>
         </div>
     </div>
-    
+
 </html>
